# Corpus-Collection-Engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FGD.md  LICENSE  PRD.md  README.md  REPORT.md  SRD.md  WORKFLOW.md  admin_panel.py  api_verification.md  app.py  category_analysis.md  config.py  debug_api.py  enhanced_app.py  init_data.py  pyproject.toml  requirements.txt  run.py  test_record_format.py
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md
.streamlit/: config.toml
EXAMPLE/: Swecha-Corpus-Example.html  Swecha-Corpus.html
EXAMPLE/Swecha-Corpus-Example_files/: config.js.download  index-C6HG6nIT.js.download
EXAMPLE/Swecha-Corpus_files/: index-CGuhDebe.css
utils/: api_client.py  auth.py  categories.py  category_mapper.py  data_export.py  database.py  file_handler.py  file_upload.py  geospatial.py  offline_mode.py  permissions.py  static_categories.py
